--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -11,17 +11,16 @@
             <h1>Escola Professor José Ranieri</h1>
             <h4>Mais de 40 anos educando gerações em Bauru!</h4>
             <br>
+        </div>
     </section>
 
     <section class="featured-sections container">
-        {# <h2 class="section-title">Nossos Pilares</h2> #}
         <div class="card-grid">
 
             <div class="card card-hover">
                 <i class="fas fa-book-open card-icon"></i>
                 <h3>História Digital</h3>
                 <p>Uma narrativa interativa sobre as décadas de fundação e crescimento da Ranieri.</p>
-                {# 🚨 CORREÇÃO: Atualizado o link para o Livro Digital com namespace #}
                 <a href="{% url 'historia:livro_digital' %}" class="text-link">Ler o Livro <i class="fas fa-chevron-right"></i></a>
             </div>
 
@@ -29,11 +28,9 @@
                 <i class="fas fa-music card-icon"></i>
                 <h3>Coral Ranieri</h3>
                 <p>Descubra o repertório, os eventos e o legado musical de nossa comunidade.</p>
-                {# CORREÇÃO: Aponta para o índice do Coral, onde o usuário escolhe o livro. #}
                 <a href="{% url 'coral:index' %}" class="text-link">Ver Livros <i class="fas fa-chevron-right"></i></a>
             </div>
 
-            {# 🚨 NOVO CARD: SIMONINHA NA COZINHA #}
             <div class="card card-hover">
                 <i class="fas fa-utensils card-icon"></i>
                 <h3>Simoninha na Cozinha</h3>
@@ -42,10 +39,17 @@
             </div>
 
             <div class="card card-hover">
-                <i class="fas fa-images card-icon"></i>
-                <h3>Galerias de Mídia</h3>
-                <p>Reviva momentos: fotos de eventos, projetos pedagógicos e o dia a dia na escola.</p>
-                <a href="#" class="text-link">Acessar Galerias <i class="fas fa-chevron-right"></i></a>
+                <i class="fas fa-camera-retro card-icon"></i>
+                <h3>Galerias públicas</h3>
+                <p>Confira os registros fotográficos públicos de nossos eventos e atividades abertas.</p>
+                <a href="{% url 'galerias:lista_publicas' %}" class="text-link">Ver Fotos <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div class="card card-hover">
+                <i class="fas fa-user-lock card-icon"></i>
+                <h3>Galerias Exclusivas</h3>
+                <p>Conteúdo exclusivo para usuários cadastrados.</p>
+                <a href="{% url 'galerias:lista_galerias' %}" class="text-link">Acessar Exclusivas <i class="fas fa-chevron-right"></i></a>
             </div>
 
         </div>
@@ -58,7 +62,6 @@
             {% if not user.is_authenticated %}
                 <div class="cta-buttons">
                     <a href="{% url 'users:login' %}" class="btn-secondary btn-lg mr-2">Fazer Login <i class="fas fa-sign-in-alt"></i></a>
-                    {# 🚨 ADIÇÃO: Botão de Cadastro #}
                     <a href="{% url 'users:register' %}" class="btn-primary btn-lg">Cadastre-se <i class="fas fa-user-plus"></i></a>
                 </div>
             {% else %}
